--- a/HumanResources/ClientApp/src/app/employee/components/employee-create/employee-create.component.html
+++ b/HumanResources/ClientApp/src/app/employee/components/employee-create/employee-create.component.html
@@ -1,20 +1,23 @@
 <section class="container">
   <form [formGroup]="employeeForm" autocomplete="off" novalidate (ngSubmit)="createEmployee(employeeForm.value)">
+    <h3>Dodaj pracownika</h3>
+    <hr />
     <div class="form-horizontal card card-body bg-light mb-2 mt-2">
+      <h5>Dane podstawowe</h5>
+      <hr />
       <div class="form-group row">
         <label for="firstName" class="control-label">Imię</label>
         <input type="text" formControlName="firstName" id="firstName" class="form-control" />
+        <small *ngIf="validateControl(employeeForm, 'firstName') && hasError(employeeForm, 'firstName', 'required')">Imię jest wymagane.</small>
       </div>
       <div class="form-group row">
         <label for="lastName" class="control-label">Nazwisko</label>
         <input type="text" formControlName="lastName" id="lastName" class="form-control" />
+        <small *ngIf="validateControl(employeeForm, 'lastName') && hasError(employeeForm, 'lastName', 'required')">Nazwisko jest wymagane.</small>
       </div>
       <div class="form-group row">
-        <em *ngIf="validateControl(employeeForm, 'firstName') && hasError(employeeForm, 'firstName', 'required')">Imię jest wymagane.</em>
-      </div>
-      <div class="form-group row">
-        <button type="submit" class="btn btn-primary" [disabled]="!employeeForm.valid">Dodaj</button>
-        <button type="button" class="btn btn-danger" (click)="redirectToList()">Anuluj</button>
+        <button type="submit" class="btn btn-primary">Dodaj</button>
+        <button type="button" class="btn btn-danger" (click)="redirectBack()">Wróć</button>
       </div>
     </div>
   </form>
