--- a/HumanResources/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/HumanResources/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+  <nav class="navbar navbar-expand-sm ml-auto navbar-light bg-white border-bottom box-shadow mb-3">
     <div class="container">
       <a class="navbar-brand" routerLink="/">Human Resources</a>
       <button class="navbar-toggler"
@@ -11,7 +11,8 @@
               (click)="toggle()">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end"
+      <app-search-menu></app-search-menu>
+      <div class="navbar-collapse collapse justify-content-end"
            [ngClass]="{ show: isExpanded }">
         <ul class="navbar-nav flex-grow">
           <li class="nav-item"
@@ -19,10 +20,8 @@
               [routerLinkActiveOptions]="{ exact: true }">
             <a class="nav-link text-dark" routerLink="/">Strona główna</a>
           </li>
-          <li class="nav-item"
-              routerLinkActive="link-active"
-              [routerLinkActiveOptions]="{ exact: true }">
-            <a class="nav-link text-dark" routerLink="/employee">Pracownicy</a>
+          <li class="nav-item">
+            <a class="nav-link text-dark" routerLink="/employee/details/1">Twój profil</a>
           </li>
         </ul>
         <app-login-menu></app-login-menu>
