--- a/HumanResources/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/HumanResources/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -20,10 +20,8 @@
               [routerLinkActiveOptions]="{ exact: true }">
             <a class="nav-link text-dark" routerLink="/">Strona główna</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link text-dark" routerLink="/employee/details/1">Twój profil</a>
-          </li>
         </ul>
+        <app-profile-menu></app-profile-menu>
         <app-login-menu></app-login-menu>
       </div>
     </div>
