Modified search functionalities.

--- a/HumanResources/ClientApp/src/app/account/components/login/login.component.html
+++ b/HumanResources/ClientApp/src/app/account/components/login/login.component.html
@@ -17,6 +17,10 @@
                 <button class="btn btn-primary" type="submit">Zaloguj się</button>
                 <button class="btn btn-danger" type="button" (click)="redirectBack()">Wróć</button>
             </div>
+            <hr />
+            <div class="form-group row">
+                <a class="nav-item" routerLink="/account/register">Nie masz konta? Zarejestruj się.</a> 
+            </div>
         </div>
     </form>
 </section>
