--- a/HumanResources/ClientApp/src/app/home/home.component.html
+++ b/HumanResources/ClientApp/src/app/home/home.component.html
@@ -1,3 +1,5 @@
-<section class="jumbotron">
-  <h3>Witamy w aplikacji!</h3>
+<section class="container">
+  <header class="jumbotron">
+    <h3>Witamy w aplikacji!</h3>
+  </header>
 </section>
