Added profile edit page and user's avatar functionality.

--- a/HumanResources/ClientApp/src/styles.css
+++ b/HumanResources/ClientApp/src/styles.css
@@ -14,3 +14,13 @@ code {
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
+
+.avatar-24 {
+  width: 24px;
+  height: 24px;
+}
+
+.avatar-256 {
+  width: 256px;
+  height: 256px;
+}
