--- a/HumanResources/ClientApp/src/app/account-menu/account-menu.component.html
+++ b/HumanResources/ClientApp/src/app/account-menu/account-menu.component.html
@@ -1,6 +1,9 @@
 <ul class="navbar-nav" *ngIf="isAuthenticated | async">
     <li class="nav-item">
-        <a class="nav-link text-dark" routerLink="/user" title="Twój profil">{{ userProfile | async }}</a>
+        <a class="nav-link text-dark" routerLink="/user" title="Twój profil">
+            <img src="{{ avatar }}" alt="Awatar użytkownika" class="avatar-24" />
+            {{ userProfile | async }}
+        </a>
     </li>
     <li class="nav-item">
         <a class="nav-link text-dark" routerLink="/account/logout" [state]='{ local: true }' title="Wyloguj się">Wyloguj się</a>
