--- a/HumanResources/ClientApp/src/app/user/components/user-edit/user-edit.component.html
+++ b/HumanResources/ClientApp/src/app/user/components/user-edit/user-edit.component.html
@@ -1,1 +1,17 @@
-<p>user-edit works!</p>
+<section class="container">
+    <form [formGroup]="userEditForm" autocomplete="off" novalidate (ngSubmit)="editUser(userEditForm.value)">
+        <h3>Edytuj profil</h3>
+        <hr />
+        <div class="form-horizontal card card-body bg-light">
+            <div class="form-group row">
+                <label for="firstName" class="control-label">Imię</label>
+                <input type="text" formControlName="firstName" id="firstName" readonly class="form-control" />
+            </div>
+            <div class="form-group row">
+                <label for="lastName" class="control-label">Nazwisko</label>
+                <input type="text" formControlName="lastName" id="lastName" readonly class="form-control" />
+            </div>
+            <app-user-avatar></app-user-avatar>
+        </div>
+    </form>
+</section>
