--- a/HumanResources/ClientApp/src/app/user/components/user-profile/user-profile.component.html
+++ b/HumanResources/ClientApp/src/app/user/components/user-profile/user-profile.component.html
@@ -1,7 +1,10 @@
 <section class="container">
     <section class="card">
         <div class="card-body">
-            <h5 class="jumbotron card-title">{{ user.firstName + ' ' + user.lastName }}</h5>
+            <div class="jumbotron">
+                <img src="{{ avatar }}" alt="Awatar użytkownika" class="avatar-256" />
+                <h3 class="card-title">{{ user.firstName + ' ' + user.lastName }}</h3>
+            </div>
             <div class="card-text">
                 <p>Adres email: <b>{{ user.email }}</b></p>
                 <p>Numer telefonu: <b>{{ user.details.phoneNumber }}</b></p>
