Added mapping for user, removed back buttons from login and registration forms, added a few fields to registration, removed user details.

--- a/HumanResources/ClientApp/src/app/account/components/login/login.component.html
+++ b/HumanResources/ClientApp/src/app/account/components/login/login.component.html
@@ -14,8 +14,7 @@
                 <small *ngIf="validateControl(loginForm, 'password') && hasError(loginForm, 'password', 'required')">Hasło jest wymagane.</small>
             </div>
             <div class="form-group row">
-                <button class="btn btn-primary" type="submit">Zaloguj się</button>
-                <button class="btn btn-danger" type="button" (click)="redirectBack()">Wróć</button>
+                <button class="btn btn-primary btn-block" type="submit">Zaloguj się</button>
             </div>
             <hr />
             <div class="form-group row">
