--- a/HumanResources/ClientApp/src/app/account/components/register/register.component.html
+++ b/HumanResources/ClientApp/src/app/account/components/register/register.component.html
@@ -47,10 +47,23 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="form-group">
-          <button class="btn btn-primary" type="submit">Zarejestruj</button>
-          <button class="btn btn-danger" type="button" (click)="redirectBack()">Wróć</button>
+        <div class="form-group row">
+          <label for="birthdate" class="control-label">Data urodzenia</label>
+          <input type="date" formControlName="birthdate" id="birthdate" class="form-control" />
+          <small *ngIf="validateControl(registerForm, 'birthdate') && hasError(registerForm, 'birthdate', 'required')">Data urodzenia jest wymagana.</small>
+        </div>
+        <div class="form-group row">
+          <label for="city" class="control-label">Miasto</label>
+          <input type="text" formControlName="city" id="city" class="form-control" />
+          <small *ngIf="validateControl(registerForm, 'city') && hasError(registerForm, 'city', 'required')">Miasto jest wymagane.</small>
+        </div>
+        <div class="form-group row">
+          <label for="phoneNumber" class="control-label">Numer telefonu</label>
+          <input type="tel" formControlName="phoneNumber" id="phoneNumber" class="form-control" />
+          <small *ngIf="validateControl(registerForm, 'phoneNumber') && hasError(registerForm, 'phoneNumber', 'required')">Numer telefonu jest wymagany.</small>
+        </div>
+        <hr />
+        <button class="btn btn-primary btn-block" type="submit">Zarejestruj się</button>
       </div>
     </form>
   </section>
