--- a/HumanResources/ClientApp/src/app/user/components/user-edit/user-edit.component.html
+++ b/HumanResources/ClientApp/src/app/user/components/user-edit/user-edit.component.html
@@ -11,7 +11,18 @@
                 <label for="lastName" class="control-label">Nazwisko</label>
                 <input type="text" formControlName="lastName" id="lastName" readonly class="form-control" />
             </div>
-            <app-user-avatar></app-user-avatar>
+            <div class="form-group row">
+                <label for="birthdate" class="control-label">Data urodzenia</label>
+                <input type="date" formControlName="birthdate" id="birthdate" readonly class="form-control" />
+            </div>
+            <div class="form-group row">
+                <label for="city" class="control-label">Miasto</label>
+                <input type="text" formControlName="city" id="city" class="form-control" />
+            </div>
+            <div class="form-group row">
+                <label for="phoneNumber" class="control-label">Numer telefonu</label>
+                <input type="tel" formControlName="phoneNumber" id="phoneNumber" class="form-control" />
+            </div>
         </div>
     </form>
 </section>
