Added message entity, updated node packages, changed Windows encoding to Linux and other changes.

--- a/HumanResources/ClientApp/src/app/account-menu/account-menu.component.html
+++ b/HumanResources/ClientApp/src/app/account-menu/account-menu.component.html
@@ -6,6 +6,9 @@
         </a>
     </li>
     <li class="nav-item">
+        <a class="nav-link text-dark" routerLink="/messages" title="Wiadomości">Wiadomości</a>
+    </li>
+    <li class="nav-item">
         <a class="nav-link text-dark" routerLink="/account/logout" [state]='{ local: true }' title="Wyloguj się">Wyloguj się</a>
     </li>
 </ul>
