--- a/HumanResources/ClientApp/src/app/user/components/user-profile/user-profile.component.html
+++ b/HumanResources/ClientApp/src/app/user/components/user-profile/user-profile.component.html
@@ -2,7 +2,7 @@
     <section class="card">
         <div class="card-body">
             <div class="jumbotron">
-                <img src="{{ avatar }}" alt="Awatar użytkownika" class="avatar-256" />
+                <img src="{{ avatar }}" alt="[brak awatara]" class="avatar-256" />
                 <h3 class="card-title">{{ user.firstName + ' ' + user.lastName }}</h3>
             </div>
             <div class="card-text">
