- Added Bootstrap and jQuery scripts, - Updated node packages, - Added modals functionality.

--- a/HumanResources/ClientApp/src/app/account/components/register/register.component.html
+++ b/HumanResources/ClientApp/src/app/account/components/register/register.component.html
@@ -67,4 +67,8 @@
       </div>
     </form>
   </section>
+
+<ng-template #errorModal>
+  <app-error-modal [message]="modalMessage"></app-error-modal>
+</ng-template>
   
