--- a/HumanResources/ClientApp/src/app/account/components/login/login.component.html
+++ b/HumanResources/ClientApp/src/app/account/components/login/login.component.html
@@ -23,3 +23,8 @@
         </div>
     </form>
 </section>
+
+<ng-template #errorModal>
+    <app-error-modal [message]="modalMessage"></app-error-modal>
+</ng-template>
+  
