--- a/HumanResources/ClientApp/src/app/home/home.component.html
+++ b/HumanResources/ClientApp/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <section class="container">
   <header class="jumbotron">
-    <h3>Witamy w aplikacji!</h3>
+    <h3>{{ header }}</h3>
   </header>
 </section>
