--- a/HumanResources/ClientApp/src/app/account/components/register/register.component.html
+++ b/HumanResources/ClientApp/src/app/account/components/register/register.component.html
@@ -68,7 +68,7 @@
     </form>
   </section>
 
-<ng-template #errorModal>
-  <app-error-modal [message]="modalMessage"></app-error-modal>
+<ng-template #messageModal>
+  <app-message-modal [title]="modalTitle" [message]="modalMessage"></app-message-modal>
 </ng-template>
   
