--- a/HumanResources/ClientApp/src/app/account-menu/account-menu.component.html
+++ b/HumanResources/ClientApp/src/app/account-menu/account-menu.component.html
@@ -9,6 +9,9 @@
         <a class="nav-link text-dark" routerLink="/messages" title="Wiadomości">Wiadomości</a>
     </li>
     <li class="nav-item">
+        <a class="nav-link text-dark" routerLink="/cloud-drive" title="Twój dysk">Twój dysk</a>
+    </li>
+    <li class="nav-item">
         <a class="nav-link text-dark" routerLink="/account/logout" [state]='{ local: true }' title="Wyloguj się">Wyloguj się</a>
     </li>
 </ul>
