--- a/HumanResources/ClientApp/src/app/search-menu/search-menu.component.html
+++ b/HumanResources/ClientApp/src/app/search-menu/search-menu.component.html
@@ -4,6 +4,6 @@
   <button class="btn btn-outline-primary" type="submit" [disabled]="searchForm.invalid" >Szukaj</button>
 </form>
 
-<ng-template #errorModal>
-  <app-error-modal [message]="modalMessage"></app-error-modal>
+<ng-template #messageModal>
+  <app-message-modal [title]="modalTitle" [message]="modalMessage"></app-message-modal>
 </ng-template>
