- Removed blog, cloud drive and message modules, - Updated node packages, - Added CSS error class, - Removed required fields for user registration (first name, last name, phone number, city, birthdate).

--- a/HumanResources/ClientApp/src/app/account/components/forgot-password/forgot-password.component.html
+++ b/HumanResources/ClientApp/src/app/account/components/forgot-password/forgot-password.component.html
@@ -6,7 +6,7 @@
             <div class="form-group row">
                 <label for="email" class="control-label">Adres email</label>
                 <input type="email" formControlName="email" id="email" class="form-control" />
-                <small *ngIf="validateControl(forgotPasswordForm, 'email') && hasError(forgotPasswordForm, 'email', 'required')">Adres email jest wymagany.</small>
+                <small *ngIf="validateControl(forgotPasswordForm, 'email') && hasError(forgotPasswordForm, 'email', 'required')" class="error">Adres email jest wymagany.</small>
             </div>
             <div class="form-group row">
                 <button class="btn btn-primary btn-block" type="submit">Wyślij</button>
