--- a/HumanResources/ClientApp/src/app/account/components/reset-password/reset-password.component.html
+++ b/HumanResources/ClientApp/src/app/account/components/reset-password/reset-password.component.html
@@ -1,27 +1,36 @@
 <section class="container">
-    <form [formGroup]="resetPasswordForm" autocomplete="off" novalidate (ngSubmit)="requestPasswordReset(resetPasswordForm.value)">
+    <form [formGroup]="resetPasswordForm" autocomplete="off" novalidate
+        (ngSubmit)="requestPasswordReset(resetPasswordForm.value)">
         <h3>Resetowanie hasła</h3>
         <hr />
         <div class="form-horizontal card card-body bg-light mb-2 mt-2">
             <div class="form-group row">
                 <label for="password" class="control-label">Hasło</label>
                 <input type="password" formControlName="password" id="password" class="form-control" />
-                <small *ngIf="validateControl(resetPasswordForm, 'password') && hasError(resetPasswordForm, 'password', 'required')">Hasło jest wymagane.</small>
+                <small
+                    *ngIf="validateControl(resetPasswordForm, 'password') && hasError(resetPasswordForm, 'password', 'required')"
+                    class="error">Hasło jest wymagane.</small>
             </div>
             <div class="form-group row">
                 <label for="confirmPassword" class="control-label">Potwierdź hasło</label>
                 <input type="password" formControlName="confirmPassword" id="confirmPassword" class="form-control" />
-                <small *ngIf="validateControl(resetPasswordForm, 'confirmPassword') && hasError(resetPasswordForm, 'confirmPassword', 'required')">Hasło jest wymagane.</small>
+                <small
+                    *ngIf="validateControl(resetPasswordForm, 'confirmPassword') && hasError(resetPasswordForm, 'confirmPassword', 'required')"
+                    class="error">Hasło jest wymagane.</small>
             </div>
             <div class="form-group row">
                 <label for="email" class="control-label">Adres email</label>
                 <input type="email" formControlName="email" id="email" class="form-control" />
-                <small *ngIf="validateControl(resetPasswordForm, 'email') && hasError(resetPasswordForm, 'email', 'required')">Adres email jest wymagany.</small>
+                <small
+                    *ngIf="validateControl(resetPasswordForm, 'email') && hasError(resetPasswordForm, 'email', 'required')"
+                    class="error">Adres email jest wymagany.</small>
             </div>
             <div class="form-group row">
                 <label for="token" class="control-label">Kod resetujący</label>
                 <input type="token" formControlName="token" id="token" class="form-control" />
-                <small *ngIf="validateControl(resetPasswordForm, 'token') && hasError(resetPasswordForm, 'token', 'required')">Kod resetujący wymagany.</small>
+                <small
+                    *ngIf="validateControl(resetPasswordForm, 'token') && hasError(resetPasswordForm, 'token', 'required')"
+                    class="error">Kod resetujący wymagany.</small>
             </div>
             <div class="form-group row">
                 <button class="btn btn-primary btn-block" type="submit">Wyślij</button>
