--- a/HumanResources/ClientApp/src/app/user/components/user-edit/user-edit.component.html
+++ b/HumanResources/ClientApp/src/app/user/components/user-edit/user-edit.component.html
@@ -5,15 +5,15 @@
         <div class="form-horizontal card card-body bg-light">
             <div class="form-group row">
                 <label for="firstName" class="control-label">Imię</label>
-                <input type="text" formControlName="firstName" id="firstName" readonly class="form-control" />
+                <input type="text" formControlName="firstName" id="firstName" class="form-control" />
             </div>
             <div class="form-group row">
                 <label for="lastName" class="control-label">Nazwisko</label>
-                <input type="text" formControlName="lastName" id="lastName" readonly class="form-control" />
+                <input type="text" formControlName="lastName" id="lastName" class="form-control" />
             </div>
             <div class="form-group row">
                 <label for="birthdate" class="control-label">Data urodzenia</label>
-                <input type="date" formControlName="birthdate" id="birthdate" readonly class="form-control" />
+                <input type="date" formControlName="birthdate" id="birthdate" class="form-control" />
             </div>
             <div class="form-group row">
                 <label for="city" class="control-label">Miasto</label>
