--- a/HumanResources/ClientApp/src/app/account/components/login/login.component.html
+++ b/HumanResources/ClientApp/src/app/account/components/login/login.component.html
@@ -6,12 +6,12 @@
             <div class="form-group row">
                 <label for="email" class="control-label">Adres email</label>
                 <input type="email" formControlName="email" id="email" class="form-control" />
-                <small *ngIf="validateControl(loginForm, 'email') && hasError(loginForm, 'email', 'required')">Adres email jest wymagany.</small>
+                <small *ngIf="validateControl(loginForm, 'email') && hasError(loginForm, 'email', 'required')" class="error">Adres email jest wymagany.</small>
             </div>
             <div class="form-group row">
                 <label for="password" class="control-label">Hasło</label>
                 <input type="password" formControlName="password" id="password" class="form-control" />
-                <small *ngIf="validateControl(loginForm, 'password') && hasError(loginForm, 'password', 'required')">Hasło jest wymagane.</small>
+                <small *ngIf="validateControl(loginForm, 'password') && hasError(loginForm, 'password', 'required')" class="error">Hasło jest wymagane.</small>
             </div>
             <div class="form-group row">
                 <button class="btn btn-primary btn-block" type="submit">Zaloguj się</button>
