--- a/HumanResources/ClientApp/src/app/user/components/user-dashboard/user-dashboard.component.html
+++ b/HumanResources/ClientApp/src/app/user/components/user-dashboard/user-dashboard.component.html
@@ -1,3 +1,5 @@
 <section class="container">
-    
+    <button class="btn btn-outline-primary btn-block" type="button" role="button" (click)="list.getAllBlogEntries()">Odśwież</button>
+    <app-blog-entry-create #create class="row" (reloadBlogEntries)="list.getAllBlogEntries()"></app-blog-entry-create>
+    <app-blog-entry-list #list class="row" [blogEntryList]="blogEntries"></app-blog-entry-list>
 </section>
