- Added blog entry edit DTO, - Enabled autocomplete on login form, - Disabled resizable textarea to blog entry component, - Added edit mode for blog entry, - Added blog entry property to blog entry list, instead of separated properties, - Added ID property to blog entry model, - Added component decorator for form component base class, - Modified blog entry constructor by assigning current time for the same value of creation and modification date.

--- a/HumanResources/ClientApp/src/app/account/components/login/login.component.html
+++ b/HumanResources/ClientApp/src/app/account/components/login/login.component.html
@@ -1,5 +1,5 @@
 <section class="container">
-    <form [formGroup]="loginForm" autocomplete="off" novalidate (ngSubmit)="loginUser(loginForm.value)">
+    <form [formGroup]="loginForm" autocomplete="on" novalidate (ngSubmit)="loginUser(loginForm.value)">
         <h3>Zaloguj się</h3>
         <hr />
         <div class="form-horizontal card card-body bg-light mb-2 mt-2">
