--- a/HumanResources/ClientApp/src/app/blog/components/blog-entry-list/blog-entry-list.component.html
+++ b/HumanResources/ClientApp/src/app/blog/components/blog-entry-list/blog-entry-list.component.html
@@ -1,7 +1,3 @@
 <section class="container" *ngFor="let entry of blogEntryList">
-    <app-blog-entry class="row" 
-        [author]="entry.author"
-        [content]="entry.content"
-        [modificationDate]="entry.modificationDate">
-    </app-blog-entry>
+    <app-blog-entry class="row" [blogEntry]="entry" (reloadBlogEntries)="getAllBlogEntries()"></app-blog-entry>
 </section>
