--- a/HumanResources/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/HumanResources/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,7 +1,7 @@
 <header>
-  <nav class="navbar navbar-expand-lg ml-auto navbar-light bg-white border-bottom box-shadow mb-3">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom box-shadow">
     <div class="container">
-      <a class="navbar-brand" routerLink="/">Human Resources</a>
+      <a class="navbar-brand container" routerLink="/">Human Resources</a>
       <button class="navbar-toggler"
               type="button"
               data-toggle="collapse"
